# code-review-graph

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml  settings.json
.claude-plugin/: plugin.json
agents/: graph-review-agent.md
code_review_graph/: cli.py  graph.py  incremental.py  search.py  tools.py
docs/: architecture.md  schema.md
hooks/: hooks.json
server/: __init__.py  __main__.py  graph.py  incremental.py  main.py  parser.py  tools.py
skills/build-graph/: SKILL.md
skills/review-delta/: SKILL.md
skills/review-pr/: SKILL.md
tests/: test_graph.py  test_incremental.py  test_parser.py  test_tools.py
tests/fixtures/: sample_python.py
